# Temporallayr-Powerhouse

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGES.md  Dockerfile  Makefile  PUBLISHING.md  Procfile  README.md  SETUP.md  alembic.ini  coveragerc  debug_ch.py  debug_http.py  debug_ingest.py  debug_pg.py  docker-compose.yml  e2e_out.txt  e2e_out2.txt  e2e_out3.txt  env_loads.py  example_agent.py  execution.json  ingest.json  ingest_body.json  mypy_errors.txt  pyproject.toml  pytest.ini  reg.json  reg_hack.json  requirements-dev.txt  ruff_errors.txt  test_clickhouse.py  test_engine.py  test_out.txt  test_railway.py  test_smoke.py  test_trace.py
.github/scripts/: ci-prepare.sh
.github/workflows/: ci.yml  dashboard.yml  docker.yml  publish.yml
.temporallayr/: executions.db
alembic/: env.py
alembic/versions/: 20260304_0001_initial_schema.py
coverage/: __init__.py
dashboard/: .env.example  .env.production  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vercel.json  vite.config.ts
dashboard/playwright-report/: index.html
dashboard/public/: landing.html
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: AuthGuard.tsx  Layout.tsx
dashboard/src/pages/: Analytics.tsx  Incidents.tsx  Landing.tsx  NewService.tsx  Replay.tsx  Settings.tsx  Signup.tsx  Status.tsx  TraceDetail.tsx  Traces.tsx  Uptime.tsx
dashboard/src/pages/auth/: Login.tsx  Signup.tsx
dashboard/src/pages/settings/: BillingTab.tsx  UsageTab.tsx
dashboard/src/styles/: components.css  global.css  theme.css
dashboard/src/tests/: client.test.ts  components.test.tsx
dashboard/tests/: production.spec.ts
docker/clickhouse/: config.xml  schema.sql
docker/dashboard/: Dockerfile  nginx.conf
docker/server/: Dockerfile
docker/worker/: Dockerfile
docs/: ALERTING.md  roadmap.jsx
examples/: quickstart.py
helm/temporallayr/: Chart.yaml  values.yaml
helm/temporallayr/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
migrations/: 01_column_optimized_traces.sql
scripts/: patch_postgres_store.py
sdk-node/: .eslintrc.js  README.md  jest.config.js  jest_output.txt  package-lock.json  package.json  tsconfig.json
sdk-node/__tests__/: sdk.test.ts
sdk-node/src/: client.ts  index.ts  tracer.ts  transport.ts  types.ts  uuid.ts
sdk-node/tests/: tracer.test.ts  transport.test.ts
src/temporallayr/: __init__.py  client.py  config.py  context.py  decorators.py  exceptions.py  py.typed  sdk_api.py  serializer.py  transport.py
src/temporallayr/analysis/: failure_clusters.py
src/temporallayr/analytics/: __init__.py  merge_worker.py
src/temporallayr/cli/: __init__.py  main.py
src/temporallayr/cli/commands/: __init__.py  doctor.py  login.py  logs.py  test.py
src/temporallayr/core/: alert_dispatcher.py  alerting.py  audit.py  audit_chain.py  client.py  dag.py  decorators.py  diff.py  diff_engine.py  failure_cluster.py  fingerprint.py  incidents.py  logging.py  metrics.py  otel_exporter.py  queue.py  quotas.py  rate_limit.py  recorder.py  replay.py  retention.py  semantic_conventions.py  store.py  store_clickhouse.py  store_postgres.py  store_sqlite.py  transport_http.py  transport_local.py  tree_builder.py  webhooks.py
src/temporallayr/db/migrations/: __init__.py
src/temporallayr/db/migrations/versions/: 20260304_0001_initial_schema.py
src/temporallayr/export/: __init__.py  clickhouse.py
src/temporallayr/health/: poller.py  store.py
src/temporallayr/ingest/: __init__.py  pipeline.py
src/temporallayr/integrations/: __init__.py  anthropic_wrapper.py  langchain.py  llamaindex.py  openai_wrapper.py
src/temporallayr/models/: __init__.py  base.py  execution.py  replay.py
src/temporallayr/monitoring/: prometheus.py
src/temporallayr/query/: __init__.py  pipeline.py
src/temporallayr/replay/: __init__.py  diff.py  engine.py
src/temporallayr/sdk/: batching.py  client.py  transport.py
src/temporallayr/server/: analytics_routes.py  app.py  cli.py  dag_routes.py  incidents.py  lifespan.py  main.py  middleware.py  quota.py  ratelimit.py  rbac.py  replay_routes.py
src/temporallayr/server/auth/: __init__.py  api_keys.py
src/temporallayr/server/routes/: admin.py  analytics.py  public_status.py  status.py  traces.py
src/temporallayr/services/: health_monitor.py
src/temporallayr/storage/: __init__.py  clickhouse_dag.py  postgres_store.py
src/temporallayr/workers/: __init__.py  clickhouse_worker.py
tests/: __init__.py  conftest.py  test_admin_api.py  test_audit.py  test_clickhouse.py  test_concurrency.py  test_decorators.py  test_e2e.py  test_legacy_modules.py  test_pagination.py  test_public_api.py  test_quotas.py  test_ratelimit.py  test_sdk_components.py  test_server_auth.py  test_server_routes.py  test_timing.py  test_tracing_sdk.py
tests/.temporallayr/: executions.db
tests/contracts/: test_api_shapes.py
tests/e2e/: test_end_to_end.py  test_replay_engine.py
tests/fuzz/: test_diff_engine.py
tests/integration/: test_clickhouse_ingest.py  test_dag_query.py  test_dashboard_endpoints.py  test_ingest_postgres.py  test_ingestion_queue.py  test_postgres_store.py  test_rate_limiting.py  test_webhook_delivery.py  test_webhooks_delivery.py  test_worker_ingest.py
tests/unit/: test_audit_chain.py  test_dag_model.py  test_decorators.py  test_failure_clusters.py  test_health.py  test_health_monitor.py  test_integrations.py  test_metrics.py  test_quotas.py  test_rate_limit.py  test_rbac.py  test_recorder.py  test_recorder_concurrency.py  test_replay.py  test_sdk_batching.py  test_store_postgres.py  test_transport_retry.py  test_webhooks.py
workers/: ingest_worker.py
