[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temporallayr"
version = "0.2.1"
description = "Production-grade telemetry, governance, and observability for autonomous AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TemporalLayr Team", email = "engineering@temporallayr.com" }]
keywords = ["observability", "ai", "agents", "tracing", "llm"]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pydantic>=2.0.0",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.27.1",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
clickhouse = [
  "clickhouse-connect>=0.7.0",
]
postgres = [
  "asyncpg>=0.29.0",
]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.1.0",
  "black>=24.0.0",
  "pre-commit>=3.7.0",
  "pytest-cov>=4.0.0",
]
all = [
  "temporallayr[clickhouse,postgres]",
]

[project.scripts]
temporallayr = "temporallayr.cli.main:main"
temporallayr-server = "temporallayr.server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/temporallayr"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "--strict-markers"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
