[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temporallayr"
version = "0.2.1"
description = "Production-grade observability for autonomous AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TemporalLayr Team", email = "engineering@temporallayr.com" }]
keywords = ["observability", "ai", "agents", "tracing", "llm", "langchain"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://temporallayr-powerhouse.vercel.app"
Repository = "https://github.com/CodeWizarz/Temporallayr-Powerhouse"
Documentation = "https://github.com/CodeWizarz/Temporallayr-Powerhouse#readme"
dependencies = [
  "pydantic>=2.0.0",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.27.1",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
clickhouse = [
  "clickhouse-connect>=0.7.0",
  "redis>=5.0.0",
]
postgres = [
  "asyncpg>=0.29.0",
]
langchain = [
  "langchain-core>=0.1",
]
llamaindex = [
  "llama-index-core>=0.10",
]
openai = [
  "openai>=1.0",
]
anthropic = [
  "anthropic>=0.25",
]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.1.0",
  "black>=24.0.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
  "coverage>=7.6.0",
  "types-PyYAML>=6.0.12.20250516",
  "pytest-cov>=4.0.0",
]
all = [
  "temporallayr[clickhouse,postgres,langchain,llamaindex,openai,anthropic]",
]

[project.scripts]
temporallayr = "temporallayr.cli.main:main"
temporallayr-server = "temporallayr.server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/temporallayr"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
pretty = true
warn_unused_configs = true
